core: deregister all hooks before leaving pconf, otherwise some late cleanup or function call (e.g. ap_log) may use one while DSOs are unloaded.

See PR 61558 (double/second fault).



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1809881 13f79535-47bb-0310-9956-ffa450edef68